tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/us-after-point.stderr
TOML parse error at line 1, column 20
  |
1 | us-after-point = 1._2
  |                    ^
invalid floating-point number
expected digit
